# landmark

dlib/geometry/: rectangle.h
dlib/image_processing/: full_object_detection.h
test/: CMakeLists.txt  Dlib_facedetection.cpp  Dlib_facedetection.h  main.cpp
test/_build_/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  examples.sln  examples.vcxproj  examples.vcxproj.filters
test/_build_/dlib_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  dlib.sln  dlib.vcxproj  dlib.vcxproj.filters
test/_build_/dlib_build/dlib.dir/Debug/dlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
test/_build_/examples.dir/Debug/examples.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  examples.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test/_build_/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
